# SSDP_IDF

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  info.json  ssdp.c
examples/ssdp_example/: CMakeLists.txt  README.md
examples/ssdp_example/main/: CMakeLists.txt  ssdp_example.c
include/: ssdp.h
src/: ssdp.c
tools/: format_sources.py
